# ChangeLog for app-admin/eselect-rails
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.40 2011/07/07 19:07:05 hwoarang Exp $

  07 Jul 2011; Markos Chandras <hwoarang@gentoo.org> eselect-rails-0.16.ebuild:
  Stable on amd64 wrt bug #372391

*eselect-rails-0.17 (04 Jun 2011)

  04 Jun 2011; Hans de Graaff <graaff@gentoo.org> +eselect-rails-0.17.ebuild:
  Support prefix, implements bug 361855.

*eselect-rails-0.16 (10 Sep 2010)

  10 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.16.ebuild:
  Version bump with support for the forthcoming Rails 3.0.x

  04 Sep 2009; Hans de Graaff <graaff@gentoo.org>
  -eselect-rails-0.14.ebuild:
  Remove old version.

  28 May 2009; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.15.ebuild:
  ia64 stable wrt #270331

  24 May 2009; Markus Meier <maekke@gentoo.org> eselect-rails-0.15.ebuild:
  x86 stable, bug #270331

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org>
  eselect-rails-0.15.ebuild:
  stable amd64, bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> eselect-rails-0.15.ebuild:
  Marking eselect-rails-0.15 ppc64 stable for bug 270331

  23 May 2009; Brent Baude <ranger@gentoo.org> eselect-rails-0.15.ebuild:
  Marking eselect-rails-0.15 ppc stable for bug 270331

  18 May 2009; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.15.ebuild:
  Sparc stable, part of Bug #270331.

*eselect-rails-0.15 (16 Mar 2009)

  16 Mar 2009; Hans de Graaff <graaff@gentoo.org>
  +eselect-rails-0.15.ebuild:
  Version bump to support Rails 2.3.x

  10 Jan 2009; Raúl Porcel <armin76@gentoo.org> eselect-rails-0.14.ebuild:
  ia64 stable wrt #253425

  09 Jan 2009; Brent Baude <ranger@gentoo.org> eselect-rails-0.14.ebuild:
  Marking eselect-rails-0.14 ppc for bug 253425

  07 Jan 2009; Ferris McCormick <fmccor@gentoo.org>
  eselect-rails-0.14.ebuild:
  Sparc stable, part of Bug #253425.
