@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/Attic/eselect-rails-0.16.ebuild,v 1.2 2011/07/07 19:07:05 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/Attic/eselect-rails-0.16.ebuild,v 1.3 2011/07/13 20:50:11 maekke Exp $
 
 DESCRIPTION="Manages Ruby on Rails symlinks"
 HOMEPAGE="http://www.gentoo.org/"
@@ -8,7 +8,7 @@ SRC_URI="mirror://gentoo/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="amd64 ~ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND=">=app-admin/eselect-1.0.10"
