@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/racc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/racc/ChangeLog,v 1.56 2011/07/07 19:09:50 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/racc/ChangeLog,v 1.57 2011/07/13 20:49:26 maekke Exp $
+
+  13 Jul 2011; Markus Meier <maekke@gentoo.org> racc-1.4.6.ebuild:
+  x86 stable, bug #372391
 
   07 Jul 2011; Markos Chandras <hwoarang@gentoo.org> racc-1.4.6.ebuild:
   Stable on amd64 wrt bug #372391
