@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-rails
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.40 2011/07/07 19:07:05 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-rails/ChangeLog,v 1.41 2011/07/13 20:50:11 maekke Exp $
+
+  13 Jul 2011; Markus Meier <maekke@gentoo.org> eselect-rails-0.16.ebuild:
+  x86 stable, bug #372391
 
   07 Jul 2011; Markos Chandras <hwoarang@gentoo.org> eselect-rails-0.16.ebuild:
   Stable on amd64 wrt bug #372391
